Fixed the alignment issues for accessories, apps and others during content create.

--- a/public/stylesheets/plannto.css
+++ b/public/stylesheets/plannto.css
@@ -2662,7 +2662,7 @@ span.ifollow							{ width:82px; height:70px; display:block; margin:7px 0px; flo
 .btn_dislike_negative						{ width:26px; height:20px; display:block; background:url(../images/ilike_icon.png) -78px 20px ;  float:left; }
 .btn_dislike_negative:hover					{ width:26px; height:20px; display:block; background:url(../images/ilike_icon.png) -26px 20px ; float:left; }		
 
-.taggingdiv								{height:auto;display:block;float:left;width:420px;}
+.taggingdiv								{height:auto;display:block;float:left;width:410px;}
 ul.tagging								{ padding:0; margin:0; list-style:none; }
 .taggingmain							{ height:auto; background-color:#fffce0; border:solid 1px #efd68b;border-radius:2px;  float:left; margin-right:6px;padding:2px 2px 2px 2px;margin-top:5px;}
 .txt_tagging							{ font:normal 11px tahoma ; color:#c15f24; text-decoration:none; border:solid 0px; float:left;margin:0px 2px 0px 2px;}
